[project]
name = "mcp-seo-audit"
version = "1.0.0"
description = "SEO audit & indexing MCP server — Google Search Console, Indexing API, Core Web Vitals, and site analysis tools"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Amin Foroutan", email = "aio@aminforoutan.com"},
    {name = "GiorgiKemo"}
]
keywords = ["mcp", "google search console", "seo", "claude", "search analytics", "indexing api", "core web vitals"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "google-api-python-client>=2.163.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "mcp[cli]>=1.3.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-seo-audit = "gsc_server:main"

[project.urls]
"Homepage" = "https://github.com/GiorgiKemo/mcp-seo-audit"
"Bug Tracker" = "https://github.com/GiorgiKemo/mcp-seo-audit/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["gsc_server"]

